# skbl-portal

./: .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  Makefile  README.md  babel.cfg  config.cfg  config.py  docker-compose.yaml  mypy.ini  pyproject.toml  ruff.toml  run.py
.github/: DOCS.md  dependabot.yml
.github/actions/setup-python-env/: action.yml
.github/workflows/: check.yml  release.yml  rolling.yml  scheduled.yml  test.yml
app/: __init__.py  auth.wsgi  authors.py  computeviews.py  config.default.cfg  helpers.py  requirements.in  requirements.txt  static_info.py  views.py
app/static/: bootstrap.theme.min.css  style.css
app/static/pages/about-skbl/: en.html  sv.html
app/templates/: article.html  bucketresults.html  contact.html  form_submitted.html  keyword.html  keywords.html  layout.html  list.html  listresults.html  more_women.html  nestedbucketresults.html  page.html  page_static.html  place.html  placelist.html  places.html  search.html  start.html
app/translations/: messages.pot
meetings/: 20190506-möte.md
skbl/: __init__.py  authors.py  computeviews.py  config.default.cfg  helpers.py  requirements.in  requirements.txt  static_info.py  views.py
skbl/static/: bootstrap.theme.min.css  style.css
skbl/telemetry/: __init__.py  request_filter.py  request_id.py
skbl/templates/: article.html  author_presentations.html  chronic.html  chronology.html  contact.html  contact_active.html  form_submitted.html  keywords.html  layout.html  list.html  listresults.html  map.html  nestedbucketresults.html  page.html  place.html  placelist.html  places.html  quiz.html  start.html
skbl/translations/: messages.pot
tests/: conftest.py  test_routes.py
tests/__snapshots__/: test_routes.ambr
(+21 files in other folders)
