[project]
name = "skbl-portal"
version = "0.1.0"
description = "SKBL portal behind skbl.se"
authors = [{ name = "Språkbanken Text", email = "sb-info@svenska.gu.se" }]
dependencies = [
    "flask>=2.2.5",
    "flask-babel",
    "flask-compress>=1.15",
    "flask-reverse-proxy>=0.2.0.2",
    "gunicorn>=22.0.0",
    "markdown>=3.4.4",
    "pylibmc>=1.6.3",
    "pyicu>=2.13",
    "jinja2>=3.1.6",
]
requires-python = ">=3.10"
readme = "README.md"
license = { text = "MIT" }


[tool.pdm]
distribution = false

[tool.pdm.build]
includes = ["skbl/"]
source-includes = ["tests/"]

[tool.pdm.dev-dependencies]
dev = [
    "pytest>=7.4.4",
    "pytest-cov>=4.1.0",
    "ruff>=0.4.2",
    "mypy>=1.4.1",
    "syrupy>=3.0.6",
    "types-markdown>=3.5.0.3",
]

[dependency-groups]
dev = [
    "mypy>=1.15.0",
    "pytest>=8.3.4",
    "pytest-cov>=6.0.0",
    "ruff>=0.9.7",
    "syrupy>=4.8.2",
    "types-markdown>=3.7.0.20241204",
]
